[package]
name = "erebus"
description = "Erebus Kernel-Mode Driver"
version.workspace = true
authors.workspace = true
edition.workspace = true

[package.metadata.wdk.driver-model]
driver-type = "WDM"

[lib]
crate-type = ["cdylib"]
test = false

[features]
default = []
nightly = ["wdk/nightly", "wdk-sys/nightly"]

[build-dependencies]
wdk-build = "0.3.0"

[dependencies]
wdk = "0.3.0"
wdk-alloc = "0.3.0"
wdk-panic = "0.3.0"
wdk-sys = "0.3.0"
shared = { path = "../shared" }
